Fixed the height when not showing percents.

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -2,13 +2,12 @@
   box-sizing: border-box;
 }
 
-html {
-  height: 100%;
+html, body {
+  margin: 0 auto;
+  min-height: 100%;
 }
 
 body {
-  height: 100%;
-  padding: 30px 0;
   margin: 0;
   color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -18,6 +17,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #e79087;
   background-image: linear-gradient(315deg, #e79087 0%, #fcd181 74%);
+}
+
+#root {
+  text-align: center;
+  padding: 30px 20px;
 }
 
 code {
